--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nr1e/lucia-adapter-dynamodb",
   "version": "3.0.0-alpha.0",
+  "type": "module",
   "description": "A DynamoDB adapter for lucia-auth",
   "main": "dist/index.js",
   "module": "dist/index.d.js",
@@ -9,13 +10,15 @@
     "README.md",
     "LICENSE"
   ],
-  "type": "module",
   "scripts": {
+    "build": "tsc",
+    "postbuild": "prettier --check . && gts lint && cp package.json dist",
     "watch": "tsc -w",
     "test": "vitest run --coverage",
-    "build": "shx rm -rf ./dist/* && tsc",
-    "clean": "shx rm -rf ./dist && shx rm -rf ./coverage",
-    "lint": "eslint ."
+    "lint": "gts lint",
+    "fix": "gts fix",
+    "clean": "rm -rf ./dist && rm -rf ./coverage",
+    "makepretty": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,9 @@
     "DynamoDB"
   ],
   "author": "NR1E, Inc.",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nr1etech/lucia-adapter-dynamodb/issues"
@@ -39,10 +45,9 @@
     "@types/node": "^20.11.25",
     "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^8.57.0",
+    "gts": "^5.3.0",
     "lucia": "^3.0.1",
-    "shx": "^0.3.4",
     "testcontainers": "^10.9.0",
-    "tsx": "^4.7.1",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.4.0",
     "vitest": "^1.6.0"
