--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
-	"compilerOptions": {
-		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"target": "ES2022",
-		"outDir": "./dist",
-		"declaration": true,
-		"skipLibCheck": true,
-
-		"noImplicitAny": true,
-		"allowSyntheticDefaultImports": true
-	},
-	"include": ["src"],
-	"exclude": ["node_modules/", "**/*.test.ts"]
+  "extends": "./node_modules/gts/tsconfig-google.json",
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "target": "ES2022",
+    "module": "ES2022",
+    "esModuleInterop": true,
+    "moduleResolution": "bundler",
+    "importHelpers": true,
+    "lib": ["ES2022", "dom"],
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "types": ["vitest", "node"]
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
