--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@
         github-name: "Erik Jensen"
         site-branch: 'main'
         publish-dir: "dist"
+        node-versions: '[20,22]'
+        publish-node-version: '22'
       secrets:
         deploy-key: ${{ secrets.DEPLOY_KEY }}
         npm-auth-token: ${{ secrets.NPM_AUTH_TOKEN }}
