--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@
         - main
         - develop
     pull_request:
+      branches:
+        - main
+        - develop
     workflow_dispatch:
   name: ci
   jobs:
