--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "postbuild": "prettier --check . && gts lint && cp package.json dist",
+    "postbuild": "prettier --check . && gts lint && cp README.md package.json dist",
     "watch": "tsc -w",
     "test": "vitest run --coverage",
     "lint": "gts lint",
@@ -54,5 +54,11 @@
   },
   "peerDependencies": {
     "lucia": "3.x"
+  },
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "types": "./index.d.ts"
+    }
   }
 }
