--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,12 @@
-  on:
-    push:
-      branches:
-        - main
-        - develop
-    pull_request:
-      branches:
-        - main
-        - develop
-    workflow_dispatch:
-  name: ci
-  jobs:
-    publish:
-      uses: nr1etech/github-workflows/.github/workflows/javascript-library.yml@develop
-      with:
-        publish-dir: "dist"
-        node-versions: '[20,22]'
-        publish-node-version: '22'
-      secrets:
-        npm-auth-token: ${{ secrets.NPM_AUTH_TOKEN }}
-        app-id: ${{ secrets.RELEASE_BOT_ID }}
-        private-key: ${{ secrets.RELEASE_BOT_KEY }}
+on:
+  pull_request:
+    branches:
+      - main
+      - develop
+  workflow_dispatch:
+name: ci
+jobs:
+  ci:
+    uses: nr1etech/github-workflows/.github/workflows/javascript-library-build.yml@main
+    with:
+      node-versions: "[18,20,22]"
