--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
       publish-dir: 'dist'
       node-versions: '[18,20,22]'
       publish-node-version: '22'
-      develop-preid: "beta"
-      branch-preid: "alpha"
+      develop-preid: 'beta'
+      branch-preid: 'alpha'
     secrets:
       npm-auth-token: ${{ secrets.NPM_AUTH_TOKEN }}
       app-id: ${{ secrets.RELEASE_BOT_ID }}
