--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     uses: nr1etech/github-workflows/.github/workflows/javascript-library.yml@main
     if: github.actor == 'dependabot[bot]'
     with:
-      node-versions: "[18,20,22]"
+      node-versions: '[18,20,22]'
     secrets:
       app-id: ${{ secrets.RELEASE_BOT_ID }}
       private-key: ${{ secrets.RELEASE_BOT_KEY }}
