--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
-  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "target": "ES2022",
     "module": "ES2022",
-    "esModuleInterop": true,
     "moduleResolution": "bundler",
-    "importHelpers": true,
-    "lib": ["ES2022", "dom"],
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "strict": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
     "declaration": true,
     "declarationMap": true,
-    "inlineSources": true,
-    "types": ["vitest", "node"]
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.test.*"]
+    "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "pretty": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "preserveWatchOutput": true,
+    "types": ["node"]
+  }
 }
